# dynamiq

./: .gitignore  LICENSE  README.md  pyproject.toml
dynamiq/: __init__.py  compiler.py  dist.py  exceptions.py  losses.py  networks.py  optim.py  params.py  signal.py  sources.py  targets.py  verify.py
dynamiq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: dqn_cartpole.py  ppo_cartpole.py  sac_continuous_pendulum.py  sac_discrete_cartpole.py
tests/: test_continuous.py  test_framework.py  test_slice1.py  test_typecheck.py
